# QAID

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/api-server/: main.py  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/models/: schemas.py
artifacts/api-server/routers/: analysis.py  reports.py
artifacts/api-server/services/: analyzer.py  demo_data.py  feature_engineering.py  file_processor.py  ml_analyzer.py  report_generator.py  rule_engine.py
artifacts/qaid/: index.html  package.json
artifacts/qaid/.replit-artifact/: artifact.toml
artifacts/qaid/src/: App.tsx  index.css
artifacts/qaid/src/components/: theme-provider.tsx
artifacts/qaid/src/contexts/: AnalysisContext.tsx
artifacts/qaid/src/lib/: i18n.ts  logo.ts
artifacts/qaid/src/pages/: Dashboard.tsx  Landing.tsx
attached_assets/: Pasted-Build-a-complete-Full-Stack-MVP-called-QAID-QAID-is-an-_1784259120527.txt  Pasted-Create-a-completely-original-logo-for-our-product-Brand_1784263368081.txt  Pasted-Dashboard-Redesign-Executive-Dashboard-I-want-to-redesi_1784263806315.txt  Pasted-Perform-a-full-UI-UX-refinement-across-the-application-_1784270029897.txt  Pasted-QAID-Brand-Refresh-Apply-a-complete-visual-rebrand-acro_1784267488357.txt  Pasted-Redesign-the-IFRS-Compliance-section-to-look-like-a-mod_1784271034818.txt  Pasted-We-are-replacing-the-autogenerated-demo-dataset-with-ou_1784261900610.txt
lib/api-spec/: openapi.yaml
scripts/: generate-logo-pngs.mjs
(+10 files in other folders)
