[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-dateutil==2.9.0",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
    "scikit-learn==1.5.2",
    "uvicorn[standard]==0.32.1",
    "xlsxwriter==3.2.0",
]
